tests/baselines/reference/internalAliasClassInsideLocalModuleWithoutExportAccessError.errors.txt
==== tests/cases/compiler/internalAliasClassInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export module x {
        export class c {
            foo(a: number) {
                return a;
            }
        }
    }
    
    export module m2 {
        export module m3 {
            import c = x.c;
            export var cProp = new c();
            var cReturnVal = cProp.foo(10);
        }
    }
    
    export var d = new m2.m3.c();
                             ~
!!! internalAliasClassInsideLocalModuleWithoutExportAccessError.ts(17,26): error TS2094: The property 'c' does not exist on value of type 'typeof m2.m3'.